--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,22 @@
             <version>${springframework.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
@@ -78,15 +94,20 @@
             <artifactId>spring-data-cassandra</artifactId>
             <version>1.5.3.RELEASE</version>
         </dependency>
-    </dependencies>
 
-    <!--<repositories>-->
-        <!--<repository>-->
-            <!--<id>spring-milestone</id>-->
-            <!--<name>Spring Maven MILESTONE Repository</name>-->
-            <!--<url>http://repo.spring.io/libs-milestone</url>-->
-        <!--</repository>-->
-    <!--</repositories>-->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.0.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.7</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <pluginManagement>
@@ -112,6 +133,16 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
 
         <finalName>TotemSpringMVC4</finalName>
     </build>
